# aichatbot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
cogs/: ai.py
f/: _dict.py  _dictionary.json  build_msg.py  cooldown.py  dict.py  dictionary.json  funcs.py  handle_references.py
