[tool.poetry]
name = "repl_python3_aichatbot"
version = "0.1.0"
description = ""
authors = ["jeanenchanted <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
python-dotenv = "^0.19.2"
jishaku = "^1.20.0.220"
"discord.py" = "^1.7.3"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
